Created Login And Register Form

--- a/InventoryDemo/Views/Shared/_Layout.cshtml
+++ b/InventoryDemo/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     </ul>
                 </div>
                 <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
-                <a class="navbar-brand" asp-area="" asp-controller="RegisterController" asp-action="Index">Register</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Register" asp-action="Index">Register</a>
             </div>
         </nav>
     </header>
