--- a/InventoryDemo/Views/Login/Index.cshtml
+++ b/InventoryDemo/Views/Login/Index.cshtml
@@ -1,6 +1,20 @@
-﻿@{
+﻿@model InventoryDemo.Models.ViewModels.LoginView
+@{
     ViewBag.Title = "Index";
 }
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <form asp-action="Create" enctype="multipart/form-data" name="CreateDeveloperFrom">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group" style="padding-top: 15px;">
+            <label asp-for="Email" class="control-label"></label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+        
+        <div class="form-group" style="padding-top: 15px;">
+            <label asp-for="Password" class="control-label"></label>
+            <input asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+    </form>
 </div>
