--- a/InventoryDemo/Views/CompanyInfo/Create.cshtml
+++ b/InventoryDemo/Views/CompanyInfo/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model InventoryDemo.Models.ViewModels.ProductView
+﻿@model InventoryDemo.Models.ViewModels.CompanyInfoView
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create Product</h1>
+<h1>Create New Branch</h1>
 
 <div class="row">
     <div class="col-md-4">
@@ -18,25 +18,21 @@
             </div>
             
             <div class="form-group" style="padding-top: 10px;">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
+                <label asp-for="Address" class="control-label"></label>
+                <input asp-for="Address" class="form-control" />
+                <span asp-validation-for="Address" class="text-danger"></span>
             </div>
 
             <div class="form-group" style="padding-top: 10px;">
-                <label asp-for="Instock" class="control-label"></label>
-                <input asp-for="Instock" class="form-control" />
-                <span asp-validation-for="Instock" class="text-danger"></span>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
 
             <div class="form-group" style="padding-top: 10px;">
-                <label asp-for="InstockWeight" class="control-label"></label>
-                <input asp-for="InstockWeight" class="form-control" />
-                <span asp-validation-for="InstockWeight" class="text-danger"></span>
-            </div>
-            
-            <div class="form-group">
-                <input asp-for="FileUpload" type="file">
+                <label asp-for="PhoneNumber" class="control-label"></label>
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             
             <div class="form-group" style="padding-top: 15px;">
