--- a/InventoryDemo/Views/CompanyInfo/Delete.cshtml
+++ b/InventoryDemo/Views/CompanyInfo/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model InventoryDemo.Models.ViewModels.SalesmanView
+﻿@model InventoryDemo.Models.ViewModels.CompanyInfoView
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Salesman</h4>
+    <h4>Branch</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
