--- a/InventoryDemo/Views/Login/Index.cshtml
+++ b/InventoryDemo/Views/Login/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 <div class="text-center">
-    <form asp-action="Create" enctype="multipart/form-data" name="CreateDeveloperFrom">
+    <form asp-action="Index" enctype="multipart/form-data" name="CreateDeveloperFrom">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group" style="padding-top: 15px;">
             <label asp-for="Email" class="control-label"></label>
@@ -16,5 +16,10 @@
             <input asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
+
+        <div class="form-group" style="padding-top: 15px;">
+            <input type="submit" value="Log In" class="btn btn-primary" />
+        </div>
     </form>
+
 </div>
