--- a/InventoryDemo/Views/Salesman/Index.cshtml
+++ b/InventoryDemo/Views/Salesman/Index.cshtml
@@ -1,5 +1,79 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<InventoryDemo.Models.ViewModels.SalesmanView>
+
 @{
+    ViewData["Title"] = "Index";
 }
+
+<h1>Salesman List</h1>
+<td><p style="font-size:18px"><a asp-action="Create" style="color:whitesmoke" class="btn btn-success btn-md">Create New</a></p></td>
+<table class="table" border="1">
+    <thead>
+        <tr>
+            <th align = "left">
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            
+            <th align = "left">
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+
+            <th align = "left">
+                @Html.DisplayNameFor(model => model.PhoneNumber)
+            </th>
+
+            <th align = "left">
+                @Html.DisplayNameFor(model => model.Salary)
+            </th>
+
+            <th align = "left">
+                @Html.DisplayNameFor(model => model.TotalSellCustomer)
+            </th>
+            
+            <th align = "left">
+                @Html.DisplayNameFor(model => model.TotalSellPrice)
+            </th>
+            
+            <th align = "left">
+                @Html.DisplayNameFor(model => model.Image)
+            </th>
+        </tr>
+    </thead>
+    <tbody id="table-body">
+    @foreach (var item in Model) {
+        <tr>
+            <td align = "left" style="padding-top:45px;">
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            
+            <td align = "left" style="padding-top:45px;">
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            
+            <td align = "left" style="padding-top:45px;">
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            
+            <td align = "left" style="padding-top:45px;">
+                @Html.DisplayFor(modelItem => item.Salary)
+            </td>
+            
+            <td align = "left" style="padding-top:45px;">
+                @Html.DisplayFor(modelItem => item.TotalSellCustomer)
+            </td>
+            
+            <td align = "left" style="padding-top:45px;">
+                @Html.DisplayFor(modelItem => item.TotalSellPrice)
+            </td>
+            
+            <td align = "left">
+                <img src = @Html.DisplayFor(modelItem => item.Image) style="object-fit:contain;  width:100px;  height:100px;   border: solid 1px #CCC">
+            </td>
+            <td style="padding-top:45px;">
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-md">Edit</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-md">Delete</a>
+            </td>
+        </tr>
+    }
+    </tbody>
+</table>
+ 
