Product Edit Operation Implemented

--- a/InventoryDemo/Views/Shared/_Layout.cshtml
+++ b/InventoryDemo/Views/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
                         </li>
                     </ul>
                 </div>
-                <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                <a asp-area="" asp-controller="Sale" asp-action="Create" style="color:whitesmoke;" class="btn btn-success btn-md">New Sale</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Index" style="padding-left:15px;">Login</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Register" asp-action="Index">Register</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Product" asp-action="Index">Product List</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Salesman" asp-action="Index">Salesman List</a>
