--- a/InventoryDemo/Views/CompanyInfo/Create.cshtml
+++ b/InventoryDemo/Views/CompanyInfo/Create.cshtml
@@ -35,6 +35,12 @@
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             
+            <div class="form-group" style="padding-top: 10px;">
+                <label asp-for="Website" class="control-label"></label>
+                <input asp-for="Website" class="form-control" />
+                <span asp-validation-for="Website" class="text-danger"></span>
+            </div>
+            
             <div class="form-group" style="padding-top: 15px;">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
