--- a/InventoryDemo/Views/CompanyInfo/Index.cshtml
+++ b/InventoryDemo/Views/CompanyInfo/Index.cshtml
@@ -45,6 +45,9 @@
             <td align = "left" style="padding-top:45px; padding-left:50px;">
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
+            <td align = "left" style="padding-top:45px; padding-left:50px;">
+                @Html.DisplayFor(modelItem => item.Website)
+            </td>
             <td style="padding-top:45px;">
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-md">Edit</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-md">Delete</a>
