--- a/InventoryDemo/Views/Product/Edit.cshtml
+++ b/InventoryDemo/Views/Product/Edit.cshtml
@@ -17,6 +17,34 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             
+            <div class="form-group" style="padding-top: 10px;">
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+
+            <div class="form-group" style="padding-top: 10px;">
+                <label asp-for="Instock" class="control-label"></label>
+                <input asp-for="Instock" class="form-control" />
+                <span asp-validation-for="Instock" class="text-danger"></span>
+            </div>
+
+            <div class="form-group" style="padding-top: 10px;">
+                <label asp-for="InstockWeight" class="control-label"></label>
+                <input asp-for="InstockWeight" class="form-control" />
+                <span asp-validation-for="InstockWeight" class="text-danger"></span>
+            </div>
+            
+            <div align = "left" style="padding-top: 10px;">
+                <img src = @Html.DisplayFor(modelItem => Model.Image) style="object-fit:contain;  width:100px;  height:100px;   border: solid 1px #CCC">
+            </div>
+
+            <div class="form-group" style="padding-top: 10px;">
+                <label asp-for="FileUpload" class="control-label">Replace the image</label>
+                <input type="file" id="FileUpload" name="FileUpload">
+                <span asp-validation-for="FileUpload" class="text-danger"></span>
+            </div>
+            
             <div class="form-group" style="padding-top: 15px;">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
