--- a/InventoryDemo/Views/CompanyInfo/Index.cshtml
+++ b/InventoryDemo/Views/CompanyInfo/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Our Branches</h1>
 <td><p style="font-size:18px"><a asp-action="Create" style="color:whitesmoke" class="btn btn-success btn-md">Create New Branch</a></p></td>
-<table class="table">
+<table class="table" border="1">
     <thead>
         <tr>
             <th align = "center" style="padding-left:30px;">
@@ -27,6 +27,10 @@
 
             <th align = "center" style="padding-left:20px;">
                 @Html.DisplayNameFor(model => model.Website)
+            </th>
+
+            <th align = "center" style="padding-left:20px;">
+                Make Changes
             </th>
         </tr>
     </thead>
