--- a/InventoryDemo/Views/Customer/Create.cshtml
+++ b/InventoryDemo/Views/Customer/Create.cshtml
@@ -1,11 +1,20 @@
-﻿@model InventoryDemo.Models.ViewModels.CompanyInfoView
+﻿@model InventoryDemo.Models.ViewModels.CustomerView
 
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create New Branch</h1>
-
+<style>
+      input[type=checkbox],
+      input[type=radio] {
+        vertical-align: middle;
+        position: relative;
+        bottom: 1px;
+      }
+      input[type=radio] {
+        bottom: 2px;
+      }
+    </style>
+<h1>Create Customer</h1>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create" enctype="multipart/form-data">
@@ -18,33 +27,22 @@
             </div>
             
             <div class="form-group" style="padding-top: 10px;">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-
-            <div class="form-group" style="padding-top: 10px;">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-
-            <div class="form-group" style="padding-top: 10px;">
                 <label asp-for="PhoneNumber" class="control-label"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
-            
-            <div class="form-group" style="padding-top: 10px;">
-                <label asp-for="Website" class="control-label"></label>
-                <input asp-for="Website" class="form-control" />
-                <span asp-validation-for="Website" class="text-danger"></span>
-            </div>
-            
-            <div class="form-group" style="padding-top: 15px;">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div class="form-group" style="padding-top: 20px;">
+                
+                <label style="display: block; padding-left: 15px;  text-indent: -15px;">
+                    <input asp-for="PremiumMembership" type="checkbox" style="transform:scale(1.3); vertical-align: bottom;  position: relative;  top: -5px;" />&nbsp; Premium Membership
+                </label>
             </div>
 
+            <div class="form-group" style="padding-top: 15px;">
+                <input type="submit" value="Create" class="btn btn-primary" />
+                
+            </div>
         </form>
     </div>
 </div>
