--- a/InventoryDemo/Views/Shared/_Layout.cshtml
+++ b/InventoryDemo/Views/Shared/_Layout.cshtml
@@ -23,16 +23,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="Register" asp-action="Index">Register</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="Salesman" asp-action="Index">Salesman</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="Customer" asp-action="Index">Customer</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="CompanyInfo" asp-action="Index">Info</a>
                         </li>
                     </ul>
                 </div>
-                <a asp-area="" asp-controller="Sale" asp-action="Create" style="color:whitesmoke;" class="btn btn-success btn-md">New Sale</a>
-                <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Index" style="padding-left:15px;">Login</a>
-                <a class="navbar-brand" asp-area="" asp-controller="Register" asp-action="Index">Register</a>
-                <a class="navbar-brand" asp-area="" asp-controller="Product" asp-action="Index">Product List</a>
-                <a class="navbar-brand" asp-area="" asp-controller="Salesman" asp-action="Index">Salesman List</a>
-                <a class="navbar-brand" asp-area="" asp-controller="CompanyInfo" asp-action="Index">Info</a>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" style="float:right">
+                    <ul class="navbar-nav flex-grow-1">
+                        <a asp-area="" asp-controller="Sale" asp-action="Create" style="color:whitesmoke;" class="btn btn-success btn-md" >New Sale</a>
+                    </ul>
+                </div>
+                
             </div>
         </nav>
     </header>
